Blog single sizing fixes on mobile

--- a/wp-content/themes/alpha/sass/components/content/_entry-header.scss
+++ b/wp-content/themes/alpha/sass/components/content/_entry-header.scss
@@ -4,6 +4,10 @@
 	border-radius: 8px;
 	max-width: 1024px;
 	margin: 0 auto;
+
+	@include media( $mobile__only ) {
+		padding: $gutter / 2;
+	}
 }
 
 .entry-title {
@@ -13,4 +17,8 @@
 .post-thumbnail + .entry-header {
 	margin-top: -250px;
 	position: relative;
+
+	@include media( $mobile__only ) {
+		margin-top: -100px;
+	}
 }
