--- a/wp-content/themes/alpha/sass/components/content/_post-thumbnail.scss
+++ b/wp-content/themes/alpha/sass/components/content/_post-thumbnail.scss
@@ -1,6 +1,7 @@
 .post-thumbnail {
+	@include container();
+
 	position: relative;
-	width: 100%;
 	min-height: 500px;
 
 	.wp-post-image {
@@ -10,5 +11,9 @@
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+	}
+
+	@include media( $mobile__only ) {
+		min-height: 320px;
 	}
 }
