--- a/wp-content/themes/alpha/sass/components/content/_posts-and-pages.scss
+++ b/wp-content/themes/alpha/sass/components/content/_posts-and-pages.scss
@@ -10,6 +10,13 @@
 	max-width: 1024px;
 	padding-left: 72px;
 	padding-right: 72px;
+	padding-bottom: 72px;
 	margin-left: auto;
 	margin-right: auto;
+
+
+	@include media( $mobile__only ) {
+		padding-left: $gutter / 2;
+		padding-right: $gutter / 2;
+	}
 }
